Fixing today summary conditions layout issue

--- a/weathergov/frontend/assets/sass/components/daily-summary.scss
+++ b/weathergov/frontend/assets/sass/components/daily-summary.scss
@@ -5,6 +5,7 @@
 
 .wx-daily-forecast-summary-area--other {
     margin-bottom: units(1);
+    @include grid-col(6);
 
     > span {
         @extend .wx-marker-before--indigo;
@@ -13,6 +14,7 @@
 
 .wx-daily-forecast-summary-area--overnight {
     margin-bottom: units(3);
+    @include grid-col(12);
 
     > span {
         @extend .wx-marker-before--midnight-indigo;
@@ -21,17 +23,18 @@
 
 .wx-daily-forecast-summary-area--daytime {
     margin-bottom: units(3);
+    @include grid-col(12);
 
     > span {
         @extend .wx-marker-before--yellow;
     }
 }
 
-@include at-media("tablet"){
+@include at-media("desktop"){
     .wx-daily-forecast-summary-area--overnight,
     .wx-daily-forecast-summary-area--other {
         margin-bottom: units(3);
-        @include grid-col(12);
+        @include grid-col(6);
     }
 
     .wx-daily-forecast-summary-area--daytime {
